Clipped homepage url so it doesn't overflow on mobile. Fixed username change functionality. Cleaned up formatting of form errors on profile page. Made description handle 300 chars.

--- a/socialprofile_demo/static/css/socialprofile.css
+++ b/socialprofile_demo/static/css/socialprofile.css
@@ -13,3 +13,4 @@
 #sp-profile-block label {float:left;width:110px;text-align:right;font-weight:normal;margin-right: 10px;}
 #sp-profile-block value {float:left;font-weight:bold;margin-right:10px;}
 #sp-secure-content {margin: 0 0 0 5px;width:97%}
+.errorlist li {font-weight: bold;margin: 15px 15px 15px 15px;color:#ff0000;}
